tests/neg-custom-args/captures/i21920.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21920.scala:34:35 ---------------------------------------
34 |  val cell: Cell[File] = File.open(f => Cell(() => Seq(f))) // error
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^
   |Found:    (f: File^?) ->? box Cell[box File^?]{val head: () ->? IterableOnce[box File^?]^?}^?
   |Required: File^ => box Cell[box File^?]{val head: () ->? IterableOnce[box File^?]^?}^?
   |
   |where:    => refers to a fresh root capability created in value cell when checking argument to parameter f of method open
   |          ^  refers to the universal root capability
   |
   |Note that reference <cap of (): IterableOnce[box File^?]^>
   |cannot be included in outer capture set ?
   |
   | longer explanation available when compiling with `-explain`
